<resources>
    <string name="app_name">PixMan</string>
    <string name="choose_image">Choose Image</string>
    <string name="pixman_editor">PixMan Editor</string>
    <string name="save">Save</string>
    <string name="revert">Revert</string>
    <string name="flip_vertical">Flip Vertical</string>
    <string name="flip_horizontal">Flip Horizontal</string>
    <string name="opacity_50">Opacity 50%</string>
    <string name="add_text">Add text \"GreedyGame\"</string>
</resources>
