<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="clickHandler"
            type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root"
        android:background="@color/colorPrimary"
        tools:context=".ui.OperationActivity">

        <RelativeLayout
            android:id="@+id/rl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimaryDark">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toStartOf="@id/save"
                android:text="@string/pixman_editor"
                android:textColor="@color/green"
                android:textSize="18sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:enabled="false"
                android:onClick="@{clickHandler::onClick}"
                android:padding="20dp"
                android:text="@string/save"
                android:textColor="@color/color_c81912" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/rl_toolbar"
            android:layout_margin="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_margin="25dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:onClick="@{clickHandler::onClick}"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/revert"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_flip_ver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/tv_prev"
                android:background="@color/green"
                android:onClick="@{clickHandler::onClick}"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/flip_vertical"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_flip_hor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_flip_ver"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/green"
                android:onClick="@{clickHandler::onClick}"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/flip_horizontal"
                android:textColor="@color/colorPrimary" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_opacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_flip_ver"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/tv_flip_hor"
                android:background="@color/green"
                android:onClick="@{clickHandler::onClick}"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/opacity_50"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_flip_hor"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/green"
                android:onClick="@{clickHandler::onClick}"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/add_text"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

    </RelativeLayout>

</layout>
